# doc-agent

./: .gitignore  custom_types.py  data_loader.py  main.py  pyproject.toml  streamlit_app.py  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/docs/0/segments/0bf4094c-6202-4120-b96f-d2b760496ece/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/1ea97c2f-8ec9-4a3b-8390-83a2f98c5160/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/50a4643d-089c-4425-8828-674508867a86/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/78af0c26-6607-413a-b1ad-95b83981b277/: mutable_id_tracker.mappings  mutable_id_tracker.versions
qdrant_storage/collections/docs/0/segments/d5ced4be-d0e3-4ddf-b00d-1d050798d8e4/: mutable_id_tracker.mappings
qdrant_storage/collections/docs/0/segments/f8369159-ee0b-4baa-9553-e9c9359a1aff/: mutable_id_tracker.mappings  mutable_id_tracker.versions
